samples/_failures_safe/1761718137_22cb3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c88cdbe3.c: In function ‘main’:
./samples/SAFE/__tmp_c88cdbe3.c:161:10: error: ‘tokenize’ undeclared (first use in this function)
  161 |     if (!tokenize
      |          ^~~~~~~~
./samples/SAFE/__tmp_c88cdbe3.c:161:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c88cdbe3.c:161:18: error: expected ‘)’ at end of input
  161 |     if (!tokenize
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_c88cdbe3.c:161:5: error: expected declaration or statement at end of input
  161 |     if (!tokenize
      |     ^~
